fixed for visibility footer

--- a/src/styleweather.css
+++ b/src/styleweather.css
@@ -37,8 +37,7 @@ input {
   width: 350px;
 }
 .row #first-day {
-  margin: 0;
-  height: 290px;
+  margin-top: 120px;
 }
 .column {
   display: block;
@@ -70,7 +69,6 @@ input {
 .col-2 {
   border: 1px solid #5aaaff;
   padding: 0;
-  margin-top: 120px;
   margin-right: 2px;
   text-align: center;
   width: 52px;
